--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
+    "react-player": "^2.9.0",
     "react-scripts": "4.0.3",
+    "react-scroll": "^1.8.4",
+    "react-spinners": "^0.11.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
